# git-clone-canonical

./: Cargo.toml  README.md
src/: app.rs  basedir.rs  clone.rs  error.rs  git.rs  lib.rs  log.rs  options.rs  repopath.rs  url.rs
src/repopath/: tests.rs
src/url/: tests.rs
