[package]
name = "git-clone-canonical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
dirs = "4.0.0"
url = "2.2.2"

[dependencies.clap]
version = "3.1.18"
features = [
  "derive"
]
