[package]
name = "git-clone-canonical"
version = "0.1.4"
description = "Clone git repositories into a local path derived from the URL."
repository = "https://github.com/nathan-at-least/git-clone-canonical"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.17"
url = "2.2.2"

[dependencies.clap]
version = "3.1.18"
features = [
  "derive"
]

[dev-dependencies]
test-case = "2.2.1"
